Fix menu overflow on mobile

--- a/source/style/_theme/layout.less
+++ b/source/style/_theme/layout.less
@@ -3,6 +3,10 @@
 @panel-width-tablet: 64px;
 @panel-width-mobile: 48px;
 
+html {
+  overflow: hidden;
+}
+
 body {
   background: @color-lightest;
   overflow-y: auto;
